Catalog_mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: catalogdb-statefulset
spec:
  serviceName: catalogdb-service
  replicas: 1

  selector:
    matchLabels:
      app: catalogdb

  template:
    metadata:
      labels:
        app: catalogdb

    spec:
      restartPolicy: Always

      containers:
        - name: catalogdb
          image: mariadb:10.9

          ports:
            - containerPort: 3306
              name: catalogdb

          securityContext:
            allowPrivilegeEscalation: false

          volumeMounts:
            - name: catalogdb-pvc
              mountPath: /var/lib/mysql

            - name: tmp-volume
              mountPath: /tmp

          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m

          startupProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h localhost -u "$MYSQL_USER" -p"$MYSQL_PASSWORD"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h localhost -u "$MYSQL_USER" -p"$MYSQL_PASSWORD"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h localhost -u "$MYSQL_USER" -p"$MYSQL_PASSWORD"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: tmp-volume
          emptyDir: {}

  volumeClaimTemplates:
    - metadata:
        name: catalogdb-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: catalogdb-service
spec:
  clusterIP: None
  selector:
    app: catalogdb
  ports:
    - port: 3306
      targetPort: 3306
