Orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-orders
  labels:
    app: retail-store-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-store-orders
  template:
    metadata:
      labels:
        app: retail-store-orders
    spec:
      containers:
      - name: orders
        image: public.ecr.aws/aws-containers/retail-store-sample-orders:1.6.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "300m"
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false   
        startupProbe:
            httpGet:  
              path: /actuator/health/     
              port: 8080
            initialDelaySeconds: 100
            failureThreshold: 5
            periodSeconds: 10         
        readinessProbe:
            httpGet:  
              path: /actuator/health/     
              port: 8080
            initialDelaySeconds: 100
            failureThreshold: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: retail-store-service-orders
  labels:
    app: retail-store-orders
spec:
  selector:
    app: retail-store-orders
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
